# sailbot_vt

./: .gitignore  Dockerfile.camera  Dockerfile.general.old  Dockerfile.ntrip_client.old  Dockerfile.sailbot  Dockerfile.test.old  ISSUES.md  ISSUES.txt  README.md  TODO.md  TODO_DOCUMENTATION.md.save  VescInfo.csv  docker_dev_environment_setup.sh  gps_data.csv  install_everything_onto_jetson_no_docker.sh  microros_setup.sh  requirements.txt  run_jetson_container.sh
.devcontainer/: Dockerfile  devcontainer.json  docker_dev_environment_setup.sh
.devcontainer/crontabs/: chmod777.sh  chmod777job.txt
crontabs/: chmod777.sh  chmod777job.txt
ground_station/: .gitignore  README.md  desired_parameters.json  go.mod  main.py  pid_data.csv  requirements.txt  run.sh  send_desired_parameters_and_waypoints.py
ground_station/src/: constants.py  icons.py  main.py  thread_classes.py
ground_station_25/: go.mod
ground_station_25/src/: constants.py
ground_station_old/: best_gains.md  competition_station_keeping_script.py  desired_parameters.json  desired_parameters_old.json  desired_waypoints.json  desired_waypoints2.json  main.py  pid_data.csv  pid_plot_viewer.ipynb  renderer.py  requirements.txt  save_camera_images.py  send_desired_parameters_and_waypoints.py  test.py  utils.py
src/autopilot/: README.md  package.xml  setup.cfg  setup.py
src/compass/: package.xml  setup.cfg  setup.py
src/gps/: setup.cfg
src/gps2_not_used/: package.xml  setup.py
src/jetsonVESC/: package.xml  setup.cfg  setup.py
src/launch/: motor_test.launch.py  motorboat.launch.py  motorboat_test.launch.py  sailbot_jetson.launch.py  simulation.launch.py
src/mcu/: package.xml  setup.cfg  setup.py
src/microros/: CMakeLists.txt  COLCON_IGNORE  microros_setup.sh  package.xml
src/microros/src/: amt22_encoder_library.h  cmps14_compass_library.h  common_libraries.h  common_microros_libs.h  config.h  contactor_driver_library.h  drv8711_stepper_motor_driver_library.h  encoder_read.c  magnetometer_HAL.c  magnetometer_read.c  main.c  main_microros_node.c  main_microros_node.h  pololu_HAL.c  polulu_HAL.c  rudder_control.c  rudder_control.h  sensor_transmission.c  sensor_transmission.h  uros_logger.c  uros_logger.h  winch_control.c  winch_control.h
src/rc/: README.md  package.xml  setup.cfg  setup.py
src/sailbot_msgs/: CMakeLists.txt  README.md  package.xml
src/sensors/: package.xml  setup.py
src/sensors_transmission/: CMakeLists.txt  package.xml
src/sensors_transmission/src/: sensor_transmission.c
src/simulation/: README.md  package.xml  setup.cfg  setup.py
src/vesc/: package.xml  setup.cfg  setup.py
src/wind_sensor/: package.xml  setup.cfg  setup.py
testing/: broadcast_ip_address.py  cartesian_polar_test.py  encoder_read_backup.c  get_jetson1_ip.py  sailbotvt_vpn_profile.ovpn  serial_test.py  simple.py  test.py  weighted_moving_average.py
(+110 files in other folders)
